library begins to be usable, reverted name requestContinue() to original continueRequest() for easy swap while testing, changed "main" to "index", added types generator, more info in package.json

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/index.ts"></script>
     <script type="module">
-      import { add, sub } from "./src/main";
+      import { add, sub } from "./src/index";
 
       const addOutput = document.getElementById("addOutput");
       const subOutput = document.getElementById("subOutput");
